# ui-recorder

./: README.md  pyproject.toml
prot/: epoch_save_spacing.py  record.py  smooth_step.py  ui_events.py
test/: test_chili2.py
ui_recorder/: record.py  replay.py  speak.py  test_chili2.py  ui_events.py
