[tool.poetry]
name = "prot"
version = "0.1.0"
description = ""
authors = ["Hugh Perkins <hughperkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pynput = "^1.7.6"
chili = "^2.8.4"

[tool.poetry.group.dev.dependencies]
types-pynput = "^1.7.5.7"
flake8-pyproject = "^1.2.3"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-record = "prot.mouse_record_pynput:run"

[tool.flake8]
max-line-length = 120
